[package]
name = "sierra-reenigne"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bmp = "0.5.0"
byteorder = "1.5.0"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
explode = "0.1.2"
log = "0.4.22"
num_enum = "0.7.3"
packed_struct = "0.10.1"
pest = "2.7.15"
pest_derive = { version = "2.7.15", features = ["grammar-extras"] }
