[package]
name = "sciscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
byteorder = "1.5.0"
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
env_logger = "0.11.1"
log = "0.4.20"
